Bug 155920 - IMPRESS: presentation doesn't end normally when displayed on two screens
Summary: IMPRESS: presentation doesn't end normally when displayed on two screens
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: dldld
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
: 156304 (view as bug list)
Depends on:
Blocks: Slide-Show
  Show dependency treegraph
 
Reported: 2023-06-19 09:05 UTC by thedeadlysarcasm
Modified: 2023-07-17 21:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot displaying the final slide (one-page, blank presentation) (46.83 KB, image/png)
2023-06-19 09:08 UTC, thedeadlysarcasm
Details
Screenshot showing what is displayed after advancing past the final slide (normal behaviour) (51.97 KB, image/png)
2023-06-19 09:09 UTC, thedeadlysarcasm
Details
Screenshot showing what is displayed after advancing past screenshot 2. (47.60 KB, image/png)
2023-06-19 09:10 UTC, thedeadlysarcasm
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thedeadlysarcasm 2023-06-19 09:05:27 UTC
Description:
When displaying a presentation on two screens, the presentation doesn't end normally.

Steps to Reproduce:
This has been tested on Windows 10, with two screens, in extended screen mode.

1. Open any presentation or create a new one
2. Start presentation (F5)
3. Advance until past the final slide ("Click to end presentation is displayed")
4. Advance the presentation again

Actual Results:
The presentation returns to the final slide, and trying to advance the presentation further has no effect: to exit the presentation, ESC must be pressed.

Expected Results:
The presentation ends as normal.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: it-IT (it_IT); UI: it-IT
Calc: threaded
Comment 1 thedeadlysarcasm 2023-06-19 09:08:29 UTC
Created attachment 187981 [details]
Screenshot displaying the final slide (one-page, blank presentation)
Comment 2 thedeadlysarcasm 2023-06-19 09:09:06 UTC
Created attachment 187982 [details]
Screenshot showing what is displayed after advancing past the final slide (normal behaviour)
Comment 3 thedeadlysarcasm 2023-06-19 09:10:04 UTC
Created attachment 187983 [details]
Screenshot showing what is displayed after advancing past screenshot 2.

From this point, it's impossible to advance the presentation further; ESC must be pressed to exit.
Comment 4 Stéphane Guillou (stragu) 2023-06-19 16:32:53 UTC
Thanks Deadly Sarcasm!

Reproduced in:

Version: 7.5.4.2 (X86_64) / LibreOffice Community
Build ID: 36ccfdc35048b057fd9854c757a8b67ec53977b6
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (en_AU.UTF-8); UI: en-US
Calc: threaded

And recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ec60d354359067f8c5c686ef2239ee705916de43
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Started in 7.4.

Bibisected with linux-64-7.4 repo to first bad commit 353798c2e4b0b9ff4e1a14d6df4a2b1621947d6e which points to core commit:

commit daeba3f3cc376365b041c2441e3b6dbd46aa8235
author	dldld <LibreOfficeContribution@dldld.de>	Fri Apr 22 21:36:38 2022 +0200
committer	Thorsten Behrens <thorsten.behrens@allotropia.de>	Wed Apr 27 12:14:49 2022 +0200
tdf#141835 handle SHOWWINDOWMODE_END when resuming the slide show
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133337

Daniel, can you please have a look?
Comment 5 Commit Notification 2023-06-20 11:46:37 UTC
Daniel Lohmann committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ca90149fa3f7c8161393490d4c0149c1cbcc3c28

tdf#155920: next effect in END mode should no resume show

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2023-06-22 06:58:03 UTC
Fix verified in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 66da786bdd4588b31755058acf46034c2056215c
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you both!
Comment 7 Stéphane Guillou (stragu) 2023-07-17 21:21:28 UTC
*** Bug 156304 has been marked as a duplicate of this bug. ***